# Airway-Diffusion-MRI-Simulations

./: .gitignore  CMakeLists.txt  README.md
figures/: disease.hdf5  healthy.hdf5  show_geoVolume.m
src/: CMakeLists.txt  main.c  volume_2_hdf5.c
src/morphology/: CMakeLists.txt  buddedcylinder.c  buddedcylinder.h  cylinder.h  generatevolume.c  generatevolume.h  shapes.c  shapes.h
src/params/: CMakeLists.txt  default_buddedcylinders.c  default_buddedcylinders.h
src/util/: CMakeLists.txt  calcepsilon.h  machine_properties.c  machine_properties.h
tests/: CMakeLists.txt  suites.h  test_buddedcylinder.c  test_buddedcylinder.h  test_cylinder.c  test_generatevolume.c  test_generatevolume.h  test_machine_properties.c  test_machine_properties.h  test_shapes.c  test_shapes.h  unit_tests.c
